# ir_abl

./: .gitignore  API_REFERENCE.md  COMPLETION_VERIFICATION.md  DEPLOYMENT.md  FILE_MANIFEST.md  GETTING_STARTED.md  INDEX.md  MODERN_UI_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  docker-compose.yml  setup.bat  setup.sh  vercel.json
backend/: .gitignore  .vercelignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/db/: connection.py  queries.py
backend/app/models/: url.py
backend/app/routers/: click.py  search.py
backend/app/services/: crawler.py  ranking_engine.py  seo_scoring.py  serp_service.py  tfidf_engine.py
backend/app/utils/: text_cleaner.py  tokenizer.py
docs/: MODERN_UI_DESIGN.md  QUICK_REFERENCE.md  UI_COMPONENTS_GUIDE.md  USER_EXPERIENCE_GUIDE.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ResultCard.jsx  SearchBar.jsx
frontend/src/pages/: ResultsPage.jsx
frontend/src/services/: api.js
frontend/src/styles/: App.css  ResultCard.css  ResultsPage.css  SearchBar.css  index.css
